[package]
name = "noreplace_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"], default-features = false }
serde_json = "1.0"
deltalake = { git = "https://github.com/delta-io/delta-rs" , rev = "7633fd6b38e8eb846acb4c6075176055dff82b24"}
lazy_static = "1.4"
regex = "1.5.4"
parquet = { git = "https://github.com/softwareartistry/arrow-rs", features = [
    "arrow",
    "base64",
    "snap",
    "cli",
], default-features = false }
itertools = "0.10.3"
tokio = {version = "1.17", features = ["rt-multi-thread"]}